--- a/environment.yml
+++ b/environment.yml
@@ -27,6 +27,7 @@ dependencies:
   - pip:
       - annotated-types==0.7.0
       - anyio==4.10.0
+      - beautifulsoup4==4.13.5
       - colorama==0.4.6
       - distro==1.9.0
       - h11==0.16.0
@@ -37,6 +38,7 @@ dependencies:
       - pydantic==2.11.9
       - pydantic-core==2.33.2
       - sniffio==1.3.1
+      - soupsieve==2.8
       - tqdm==4.67.1
       - typing-extensions==4.15.0
       - typing-inspection==0.4.1
